@@ -1,6 +1,12 @@
 # ChangeLog for dev-texlive/texlive-formatsextra
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-formatsextra/ChangeLog,v 1.29 2009/06/10 14:05:26 alexxy Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-formatsextra/ChangeLog,v 1.30 2010/01/11 03:16:52 aballier Exp $
+
+*texlive-formatsextra-2009 (11 Jan 2010)
+
+  11 Jan 2010; Alexis Ballier <aballier@gentoo.org>
+  +texlive-formatsextra-2009.ebuild:
+  Bump to TeX Live 2009
 
   10 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
   texlive-formatsextra-2008.ebuild:
